--- a/css/waiting.css
+++ b/css/waiting.css
@@ -12,3 +12,10 @@
     width: 100%;
     height: 100%;
 }
+
+@media only screen and (max-width: 600px) and (min-width: 480px) {
+    .google-form-container {
+        height: 780px;
+    }
+}
+
